fix: issue with wrong height for tag (#2977)

--- a/packages/components/src/components/tag/tag.scss
+++ b/packages/components/src/components/tag/tag.scss
@@ -73,6 +73,10 @@
 	&:has(db-button):has(dbbutton) .db-tab-remove-button {
 		display: none;
 	}
+
+	> [class^="db-"] {
+		block-size: 100%;
+	}
 }
 
 .db-tag {
@@ -106,16 +110,8 @@
 			border: 0;
 			border-radius: inherit;
 			cursor: pointer;
-			transform: translateX(
-				calc(
-					(
-							var(
-									--db-padding-inline-start,
-									#{variables.$db-spacing-fixed-2xs}
-								) + #{variables.$db-border-height-3xs}
-						) * -1
-				)
-			);
+			inset: 0;
+			aspect-ratio: unset;
 
 			&:checked {
 				&,
